# spacy-numberbatch

./: .gitignore  .gitmodules  pyproject.toml
data/: download_numberbatch.sh
spacy_numberbatch/: .gitignore  __init__.py  build.py  util.py  version.py
spacy_numberbatch/models/: __init__.py  en_core_numberbatch_lg.py  en_core_numberbatch_md.py  en_core_numberbatch_sm.py  en_vectors_numberbatch_lg.py  en_vectors_numberbatch_md.py  en_vectors_numberbatch_sm.py
tests/: test_spacy_numberbatch.py
