[tool.poetry]
name = "spacy_numberbatch"
version = "0.1.0"
description = ""
authors = ["Diwank Singh Tomer <diwank.singh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^2.3.5"
transformers = "^4.0.1"
gensim = "^3.8.3"
ipython = "^7.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
